--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,4 +52,4 @@ jobs:
     # 8. Завершаем работу (очистка контейнеров)
     - name: Shutdown services
       if: always()
-      run: docker-compose down
+      run: docker compose down
