--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,10 +23,11 @@ jobs:
 
 
     # 3. Устанавливаем Docker Compose (если используется старая версия)
-    - name: Install Docker Compose
+# Установка Docker Compose вручную (бинарный файл)
+    - name: Install Docker Compose Manually
       run: |
-        sudo apt-get update
-        sudo apt-get install docker-compose-plugin
+        curl -L "https://github.com/docker/compose/releases/download/v2.35.1/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
         
     - name: Verify Docker Compose installation
       run: docker compose --version
